# SOCC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/socc/: define_members.inc  function.hpp  instrs.hpp  library.hpp  operator.hpp  statement.hpp  type.hpp  var.hpp
include/socc/util/: macro_param.hpp
src/: instrs.cpp  library.cpp  statement.cpp  var.cpp
